--- a/src/pages/pages.module.css
+++ b/src/pages/pages.module.css
@@ -4,12 +4,32 @@
     text-align: center;
     font-size: 0.9em;
     font-weight: 200;
-    padding: 10px;
+    padding: 5px;
 }
 
 .aboutron h3 {
     font-size: 1.1em;
     margin: 2%;
+}
+.social {
+    text-align: center;
+    /* padding: 5px 15px; */
+    font-size: 0.8em;
+    margin-bottom: 5%;
+}
+
+
+.linkedin{
+    color: #00829A;
+}
+
+.github{
+    color: #24292E;
+    margin: 0 5%;
+}
+
+.twitter{
+    color: #1C95E0;
 }
 
 .postsHeader {
@@ -30,4 +50,14 @@
     .postsHeader {
         padding: 0 2%;
     }
+
+    .github{
+        margin: 0 10%;
+    }
+
+    .postsHeader {
+        border-top: #FFFFFF 1px solid;
+        padding: 4% 0 0 3%;
+    }
+    
 }
